--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My site</title>
   </head>
-  <body>
+  <body style="background-color:#F5DA81;">
 
 
   <p>Hello World</p>
